# xlsz

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: build.yaml  ci.yaml
python/xlsz/: __init__.py  _lowlevel.cp312-win_amd64.pyd  _xlsx.cp312-win_amd64.pyd  _xlsx.pyi
src/: lib.rs  xlsx.rs
src/xlsx/: content_types.rs  xl.rs
src/xlsx/xl/: shared_strings.rs  styles.rs  workbook.rs  worksheet.rs  worksheets.rs
tests/: test_hello.py
tests/testdata/: testdata.xlsx
xlsz/: Cargo.toml
xlsz-py/: Cargo.toml  pyproject.toml
xlsz-py/python/xlsz/: _xlsx.pyi
xlsz-py/src/: lib.rs  xlsx.rs
xlsz-py/src/xlsx/: xl.rs
