[package]
name = "xlsz-py"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "xlsz_py"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.19.0"
quick-xml = { version = "0.31.0", features = ["serialize"] }
serde = { version = "1.0.196", features = ["derive"] }
zip = "0.6.6"
